<resources>
    <string name="app_name">Pamietaj o Zdrowiu</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="new_medicine">New Medicine</string>
    <string name="pantry">Pantry</string>
    <string name="medical_log">Log</string>
    <string name="medical_history">History</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="when_to_take">When To Take</string>
    <string name="start">Start Date</string>
    <string name="end">End Date</string>
    <string name="add">ADD</string>
    <string name="start_time">Start Time</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invalid_date">End Date has to be after Start Date</string>
    <string name="fill_all_fields">Fill all Fields</string>
    <string name="welcome">Welcome</string>
    <string name="signup">Sing Up</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="name">Name</string>
    <string name="i_already_have_an_account">I Already have an Account</string>
    <string name="create_account_textview">Create a new Account</string>
    <string name="everyday">Everyday</string>
    <string name="custom">Custom</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="nothing_scheduled_that_day">Nothing scheduled that day</string>
    <string name="details">DETAILS</string>
    <string name="details_name">Name:</string>
    <string name="details_date">Date:</string>
    <string name="details_time">Time:</string>
    <string name="details_category">Category:</string>
    <string name="ok">OK</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="details_group">Group</string>
    <string name="pantry_section_name">Section name</string>
    <string name="nothing_in_the_pantry">Nothing in the pantry</string>
    <string name="confirm">Confirm</string>
    <string name="delete">Delete</string>
    <string name="group">Group</string>
    <string name="save">Save</string>
    <string name="nothing_logged_that_day">Nothing logged that day</string>
    <string name="title">Title</string>
    <string name="history_instance_content">Describe how you are feeling</string>
    <string name="no_notes_created_yet">No notes created yet</string>
</resources>