<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_calendar_month_24"
            android:title="@string/home"/>
        <item
            android:id="@+id/new_medicine"
            android:icon="@drawable/baseline_add_24"
            android:title="@string/new_medicine"/>
        <item
            android:id="@+id/nav_pantry"
            android:icon="@drawable/baseline_medical_information_24"
            android:title="@string/pantry"/>
        <item
            android:id="@+id/nav_medical_log"
            android:icon="@drawable/baseline_bookmark_add_24"
            android:title="@string/medical_log"/>
        <item
            android:id="@+id/nav_medical_history"
            android:icon="@drawable/baseline_menu_book_24"
            android:title="@string/medical_history"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/settings"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/baseline_info_24"
            android:title="@string/about_us"/>
    </group>

    <group android:checkableBehavior="single">
            <item
                android:title="@string/profile">
                <menu>
                    <item
                        android:id="@+id/nav_profile"
                        android:icon="@drawable/baseline_person_24"
                        android:title="@string/profile"/>
                    <item
                        android:id="@+id/nav_logout"
                        android:icon="@drawable/baseline_logout_24"
                        android:title="@string/logout"/>
                </menu>
            </item>
    </group>

</menu>