<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context=".WelcomeActivity">


    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/signup"
        android:fontFamily="sans-serif-condensed-medium"
        android:textColor="@color/blue"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/form_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/welcome_text">

        <EditText
            android:id="@+id/first_name_textbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:inputType="textPersonName"
            android:textSize="20sp"
            android:hint="@string/first_name"/>

        <EditText
            android:id="@+id/last_name_textbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="50dp"
            android:inputType="textPersonName"
            android:textSize="20sp"
            android:hint="@string/last_name"/>

        <EditText
            android:id="@+id/mail_textbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="50dp"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            android:hint="@string/email"/>

        <EditText
            android:id="@+id/password_textbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="50dp"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:hint="@string/password"/>

        <EditText
            android:id="@+id/repeat_password_textbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="50dp"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:hint="@string/repeat_password"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginBottom="10dp"
        android:indeterminateTint="@color/blue"
        app:layout_constraintBottom_toTopOf="@id/signup_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginHorizontal="10dp"
        android:text="@string/signup"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="20sp"
        android:textStyle="bold"
        android:backgroundTint="@color/blue"
        app:layout_constraintBottom_toTopOf="@id/have_account_textview"/>

    <TextView
        android:id="@+id/have_account_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_marginHorizontal="10dp"
        android:text="@string/i_already_have_an_account"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="15sp"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>