<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMedicineActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Spinner
        android:id="@+id/medicine_source_dropdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </Spinner>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/add_new_medicine_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="64dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/medicine_source_dropdown">

        <EditText
            android:id="@+id/medicine_name_nm"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/medicine_name"
            android:importantForAutofill="no"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/medicine_name_nm">

            <RadioGroup
                android:id="@+id/add_medicine_radioGroup_nm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/everyday_radiobutton_nm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/everyday"
                    android:checked="true" />
                <RadioButton
                    android:id="@+id/custom_radiobutton_nm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/custom"/>
            </RadioGroup>

            <GridLayout
                android:visibility="gone"
                android:id="@+id/days_of_week_container_nm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numColumns="auto_fit"
                android:columnCount="5"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/monday_checkbox_nm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/monday" />

                <CheckBox
                    android:id="@+id/tuesday_checkbox_nm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/tuesday" />

                <CheckBox
                    android:id="@+id/wednesday_checkbox_nm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/wednesday" />

                <CheckBox
                    android:id="@+id/thursday_checkbox_nm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/thursday" />

                <CheckBox
                    android:id="@+id/friday_checkbox_nm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/friday" />

                <CheckBox
                    android:id="@+id/saturday_checkbox_nm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/saturday" />

                <CheckBox
                    android:id="@+id/sunday_checkbox_nm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/sunday" />

            </GridLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/time_of_taking_nm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="7"
            android:hint="@string/when_to_take"
            android:importantForAutofill="no"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/medicine_name_nm"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/time_of_taking_nm"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/start_date_nm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:importantForAutofill="no"
                android:textSize="20sp"
                android:textStyle="bold"
                android:hint="@string/start"
                android:text=""
                android:enabled="true"/>

            <TextView
                android:id="@+id/end_date_nm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:layout_marginStart="50dp"
                android:importantForAutofill="no"
                android:textSize="20sp"
                android:textStyle="bold"
                android:hint="@string/end"
                android:text=""
                android:enabled="false"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_from_list_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="64dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/medicine_source_dropdown">

        <Spinner
            android:id="@+id/medicine_names_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintBaseline_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </Spinner>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/medicine_name_nm">

            <RadioGroup
                android:id="@+id/add_medicine_radioGroup_fl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/everyday_radiobutton_fl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/everyday"
                    android:checked="true" />
                <RadioButton
                    android:id="@+id/custom_radiobutton_fl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/custom"/>
            </RadioGroup>

            <GridLayout
                android:visibility="gone"
                android:id="@+id/days_of_week_container_fl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numColumns="auto_fit"
                android:columnCount="5"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/monday_checkbox_fl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/monday" />

                <CheckBox
                    android:id="@+id/tuesday_checkbox_fl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/tuesday" />

                <CheckBox
                    android:id="@+id/wednesday_checkbox_fl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/wednesday" />

                <CheckBox
                    android:id="@+id/thursday_checkbox_fl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/thursday" />

                <CheckBox
                    android:id="@+id/friday_checkbox_fl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/friday" />

                <CheckBox
                    android:id="@+id/saturday_checkbox_fl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/saturday" />

                <CheckBox
                    android:id="@+id/sunday_checkbox_fl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/sunday" />

            </GridLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/time_of_taking_fl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="7"
            android:hint="@string/when_to_take"
            android:importantForAutofill="no"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/medicine_name_nm"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/time_of_taking_nm"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/start_date_fl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:importantForAutofill="no"
                android:textSize="20sp"
                android:textStyle="bold"
                android:hint="@string/start"
                android:text=""
                android:enabled="true"/>

            <TextView
                android:id="@+id/end_date_fl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:layout_marginStart="50dp"
                android:importantForAutofill="no"
                android:textSize="20sp"
                android:textStyle="bold"
                android:hint="@string/end"
                android:text=""
                android:enabled="false"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/add_from_prescription_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/medicine_source_dropdown">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello"/>
    </LinearLayout>


    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/add_button"/>

    <Button
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:text="@string/add"
        android:backgroundTint="@color/blue"/>

</androidx.constraintlayout.widget.ConstraintLayout>